Fixing the header logo overlap, again

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -14,7 +14,6 @@ $masthead-link-color: #0f9862;
 	width: 100%;
 	top: 10px;
 	padding-right:60px;
-    margin-right: 241px;
 }
 
 h1 {
